# password-guesser

./: .gitignore  Cargo.toml  README.md
data/: common_passwords.txt
examples/: target_profile.toml
src/: common.rs  generator.rs  main.rs  mutations.rs  profile.rs  wordlist.rs
src/cracker/: hash.rs  mod.rs  wifi.rs
