[package]
name = "password-guesser"
version = "0.1.0"
edition = "2021"
description = "Smart password guesser for educational cybersecurity research"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
digest = "0.10"
hex = "0.4"
bcrypt = "0.15"
rayon = "1.10"
indicatif = "0.17"
colored = "2"
anyhow = "1"
